--- a/package.json
+++ b/package.json
@@ -27,5 +27,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "axios": "^0.18.0",
+    "history": "^4.9.0",
+    "react-infinite-scroller": "^1.2.4",
+    "react-router-dom": "^5.0.0"
   }
 }
